--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -23,6 +23,13 @@ author_profile: true
   <li><strong>[BigData]</strong> IEEE International Conference on Big Data (2021, 2022)</li>
   <li><strong>[SSDBM]</strong> International Conference on Scientific and Statistical Database Management (2021)</li>
 </ul>
+<h3>Outreach</h3>
+<ul>
+  <li>Omaha Millard West High School STEM Event (2025)</li>
+  <li>Hour of Code & Tech Fair event at Nebraska Innovation Campus (2019/2022/2023/2024)</li>
+  <li>Girls Code Lincoln visiting the visualization lab with hands-on activities (2023)</li>
+  <li>The third annual Introduce a Girl to Engineering day (2020)</li>
+</ul>
 
 
 <!-- {% include base_path %}
