--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -23,6 +23,7 @@ author_profile: true
   <li><strong>[BigData]</strong> IEEE International Conference on Big Data (2021, 2022)</li>
   <li><strong>[SSDBM]</strong> International Conference on Scientific and Statistical Database Management (2021)</li>
 </ul>
+<h2>Outreach Service</h2>
 <h3>Outreach</h3>
 <ul>
   <li>Omaha Millard West High School STEM Event (2025)</li>
