--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -8,8 +8,7 @@ author_profile: true
 <h2>Academic Service</h2>
 <h3>Conference Program Committees</h3>
 <ul>
-  <li><strong>[VIS]</strong> IEEE Visualization Conference (VIS), Full Papers (2025) and Short Papers (2025)
-  </li>
+  <li><strong>[VIS]</strong> IEEE Visualization Conference (VIS), Full Papers (2025)</li>
 </ul>
 <h3>Journal Reviewers</h3>
 <ul>
