--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -9,6 +9,7 @@ author_profile: true
 <h3>Conference Program Committees</h3>
 <ul>
   <li><strong>[VIS]</strong> IEEE Visualization Conference (VIS), Full Papers (2025)</li>
+  <li><strong>[CLUSTER]</strong> IEEE International Conference on Cluster Computing, Data, Storage, and Visualization (2025)</li>
 </ul>
 <h3>Journal Reviewers</h3>
 <ul>
