--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -21,6 +21,7 @@ author_profile: true
   <li><strong>[VIS]</strong> IEEE Visualization Conference, Full Papers (2021, 2022, 2023, 2024, 2025)</li>
   <li><strong>[CLUSTER]</strong> IEEE International Conference on Cluster Computing (2025)</li>
   <li><strong>[EuroVis]</strong> Eurographics/IEEE-VGTC Symposium on Visualization (2023)</li>
+  <li><strong>[LDAV]</strong> IEEE Symposium on Large Data Analysis and Visualization (2022, 2023)</li>
   <li><strong>[BigData]</strong> IEEE International Conference on Big Data (2021, 2022)</li>
   <li><strong>[SSDBM]</strong> International Conference on Scientific and Statistical Database Management (2021)</li>
 </ul>
