--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -8,7 +8,8 @@ author_profile: true
 <h2>Academic Service</h2>
 <h3>Conference Program Committees</h3>
 <ul>
-  <li><strong>[VIS]</strong> IEEE Visualization Conference (VIS), Full Papers (2025)</li>
+  <li><strong>[LDAV]</strong> IEEE Workshop on Large Data Analysis and Visualization, Full Papers (2025)</li>
+  <li><strong>[VIS]</strong> IEEE Visualization Conference, Full Papers (2025)</li>
   <li><strong>[CLUSTER]</strong> IEEE International Conference on Cluster Computing, Data, Storage, and Visualization (2025)</li>
 </ul>
 <h3>Journal Reviewers</h3>
